--- a/index.html
+++ b/index.html
@@ -7,59 +7,59 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../Barbie/Estilo/css/reset.css">
-    <link rel="stylesheet" href="../Barbie/Estilo/css/estilos.css">
-    <link rel="stylesheet" href="../Barbie/Estilo/css/responsive.css">
+    <link rel="stylesheet" href="../Estilo/css/reset.css">
+    <link rel="stylesheet" href="../Estilo/css/estilos.css">
+    <link rel="stylesheet" href="../Estilo/css/responsive.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logo" src="../Barbie/Estilo/Imagens/logo.png" alt="logo">
+        <img class="logo" src="../Estilo/Imagens/logo.png" alt="logo">
     </header>
     <main class="selecao-personagens">
         <section class="personagens">
             <h1 class="titulo">Escolha um personagem</h1>
             <ul class="lista-personagens">
                 <li class="personagem selecionado" id="Barbie" data-name="Barbie" data-description="Barbie é a melhor boneca do mundo. Ela é simplesmente um ícone da moda, possui mais de 180 profissões, tem tudo que se possa imaginar inclusive os melhores amigos e namorado perfeito.">
-                    <img src="../Barbie/Estilo/Imagens/CBarbie.png" alt="Barbie">
+                    <img src="..Estilo/Imagens/CBarbie.png" alt="Barbie">
                 </li>
                 <li class="personagem" id="Ken" data-name="Ken" 
                 data-description="Ken é o namorado perfeito da Barbie. Ele é um boneco muito apaixonado e dedicado, também é um exímio inventor e construtor que faz absolutamente tudo para ajudar Barbie e seus amigos.">
-                    <img src="../Barbie/Estilo/Imagens/CKen.png" alt="Ken">
+                    <img src="../Estilo/Imagens/CKen.png" alt="Ken">
                 </li>
                 <li class="personagem" id="Raquelle" data-name="Raquelle" 
                 data-description="Raquelle é uma boneca antipática e invejosa, cujo maior sonho é superar a Barbie se tornando a melhor boneca do mundo. Ela está determinada em usurpar a vida de Barbie principalmente seu namorado o Ken, junto a seu irmão ela sempre tem um novo plano para alcançar seu objetivo">
-                    <img src="../Barbie/Estilo/Imagens/CRaquelle.png" alt="Raquelle">
+                    <img src="../Estilo/Imagens/CRaquelle.png" alt="Raquelle">
                 </li>
                 <li class="personagem" id="Ryan" data-name="Ryan" 
                 data-description="É um cantor fracassado que usa do seu poder de sedução e beleza para alcançar a tão sonhada fama. O irmão de Raquelle é apaixonado por si mesmo e pela Barbie e toda fama que ela emana, junto com sua irmã eles sempre conspiram contra o casal perfeito.">
-                    <img src="../Barbie/Estilo/Imagens/CRyan.png" alt="Ryan">
+                    <img src="../Estilo/Imagens/CRyan.png" alt="Ryan">
                 </li>
                 <li class="personagem" id="Skipper" data-name="Skipper"
                 data-description="A 1°Irma da Barbie é uma gênia da tecnologia e adolescente típica. É uma boneca atrevida, sarcastica e preguiçosa, atenciosa, gentil e muito competitiva. Bastante artística e criativa ama musica, filmes e moda e esta sempre criando coisas.">
-                    <img src="../Barbie/Estilo/Imagens/CSkipper.png" alt="Skipper">
+                    <img src="..Estilo/Imagens/CSkipper.png" alt="Skipper">
                 </li>
                 <li class="personagem" id="Stacie" data-name="Stacie" 
                 data-description="A 2°Irmã da Barbie é uma pré-adolescente extremamente organizada e bastante atlética. Seus esportes favoritos são o futebol e o basquete, essa boneca está sempre pronta para uma boa aventura ou resolver um novo mistério.">
-                    <img src="../Barbie/Estilo/Imagens/CStacie.png" alt="Stacie">
+                    <img src="../Estilo/Imagens/CStacie.png" alt="Stacie">
                 </li>
                 <li class="personagem" id="Chelsea" data-name="Chelsea" 
                 data-description="A irmã Roberts caçula é uma criança muito fofa e doce. Uma boneca cheia de perguntas e curiosa, mas também é exigente, competitiva e muito inteligente, sempre contagiando todos a sua volta.">
-                    <img src="../Barbie/Estilo/Imagens/CChelsea.png" alt="Chelsea">
+                    <img src="../Estilo/Imagens/CChelsea.png" alt="Chelsea">
                 </li>
                 <li class="personagem" id="Armario"  data-name="Armario" 
                 data-description="Armario é uma das muitas criações Ken, seu proposito é facilitar a vida de Barbie, esse robô tem muita personalidade e tem muito humor, entratanto ele tem um lado sombrio que pode ser ativado por um botão.">
-                    <img src="../Barbie/Estilo/Imagens/CArmario.png" alt="Armario">
+                    <img src="../Estilo/Imagens/CArmario.png" alt="Armario">
                 </li>
             </ul>
         </section>
         <sec<tion class="personagem-selecionado">
-            <img class="personagem-grande" src="../Barbie/Estilo/Imagens/GBarbie.png" alt="Personagem Selecionado">
+            <img class="personagem-grande" src="../Estilo/Imagens/GBarbie.png" alt="Personagem Selecionado">
             <div class="descricao-personagem">
                 <h2 class="nome-personagem" id="nome-personagem">BARBIE</h2>
                 <p class="descricao" id="descricao">Barbie é a melhor boneca do mundo. Ela é simplesmente um ícone da moda, possui mais de 180 profissões, tem tudo que se possa imaginar inclusive os melhores amigos e namorado perfeito.</p>
             </div>
         </section>
     </main>
-    <script src="../Barbie/index.js"></script>
+    <script src="../index.js"></script>
 </body>
 </html>
