--- a/index.html
+++ b/index.html
@@ -36,30 +36,30 @@
                 </li>
                 <li class="personagem" id="Skipper" data-name="Skipper"
                 data-description="A 1°Irma da Barbie é uma gênia da tecnologia e adolescente típica. É uma boneca atrevida, sarcastica e preguiçosa, atenciosa, gentil e muito competitiva. Bastante artística e criativa ama musica, filmes e moda e esta sempre criando coisas.">
-                    <img src="../Estilo/Imagens/CSkipper.png" alt="Skipper">
+                    <img src="../Barbie-Cards/Estilo/Imagens/CSkipper.png" alt="Skipper">
                 </li>
                 <li class="personagem" id="Stacie" data-name="Stacie" 
                 data-description="A 2°Irmã da Barbie é uma pré-adolescente extremamente organizada e bastante atlética. Seus esportes favoritos são o futebol e o basquete, essa boneca está sempre pronta para uma boa aventura ou resolver um novo mistério.">
-                    <img src="../Estilo/Imagens/CStacie.png" alt="Stacie">
+                    <img src="../Barbie-Cards/Estilo/Imagens/CStacie.png" alt="Stacie">
                 </li>
                 <li class="personagem" id="Chelsea" data-name="Chelsea" 
                 data-description="A irmã Roberts caçula é uma criança muito fofa e doce. Uma boneca cheia de perguntas e curiosa, mas também é exigente, competitiva e muito inteligente, sempre contagiando todos a sua volta.">
-                    <img src="../Estilo/Imagens/CChelsea.png" alt="Chelsea">
+                    <img src="../Barbie-Cards/Estilo/Imagens/CChelsea.png" alt="Chelsea">
                 </li>
                 <li class="personagem" id="Armario"  data-name="Armario" 
                 data-description="Armario é uma das muitas criações Ken, seu proposito é facilitar a vida de Barbie, esse robô tem muita personalidade e tem muito humor, entratanto ele tem um lado sombrio que pode ser ativado por um botão.">
-                    <img src="../Estilo/Imagens/CArmario.png" alt="Armario">
+                    <img src="../Barbie-Cards/Estilo/Imagens/CArmario.png" alt="Armario">
                 </li>
             </ul>
         </section>
         <sec<tion class="personagem-selecionado">
-            <img class="personagem-grande" src="../Estilo/Imagens/GBarbie.png" alt="Personagem Selecionado">
+            <img class="personagem-grande" src="../Barbie-Cards/Estilo/Imagens/GBarbie.png" alt="Personagem Selecionado">
             <div class="descricao-personagem">
                 <h2 class="nome-personagem" id="nome-personagem">BARBIE</h2>
                 <p class="descricao" id="descricao">Barbie é a melhor boneca do mundo. Ela é simplesmente um ícone da moda, possui mais de 180 profissões, tem tudo que se possa imaginar inclusive os melhores amigos e namorado perfeito.</p>
             </div>
         </section>
     </main>
-    <script src="../index.js"></script>
+    <script src="../Barbie-Cards/index.js"></script>
 </body>
 </html>
