--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logo" src="../Barbie-Cards/Estilo/Imagens/logo.png" alt="logo">
+        <img class="logo" src="../Barbie-Cards/Estilo/Imagens/Cards.png" alt="logo">
     </header>
     <main class="selecao-personagens">
         <section class="personagens">
@@ -53,7 +53,7 @@
             </ul>
         </section>
         <sec<tion class="personagem-selecionado">
-            <img class="personagem-grande" src="../Barbie-Cards/Estilo/Imagens/GBarbie.png" alt="Personagem Selecionado">
+            <img class="personagem-grande" src="../Barbie-Cards/Estilo/Imagens/BarbieG.png" alt="Personagem Selecionado">
             <div class="descricao-personagem">
                 <h2 class="nome-personagem" id="nome-personagem">BARBIE</h2>
                 <p class="descricao" id="descricao">Barbie é a melhor boneca do mundo. Ela é simplesmente um ícone da moda, possui mais de 180 profissões, tem tudo que se possa imaginar inclusive os melhores amigos e namorado perfeito.</p>
@@ -62,4 +62,7 @@
     </main>
     <script src="../Barbie-Cards/index.js"></script>
 </body>
+<footer class="footer">
+    <p>Copyright © 2023 ALSDS</p>
+  </footer>
 </html>
