--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="../Barbie-Cards/Estilo/Imagens/CChelsea.png" alt="Chelsea">
                 </li>
                 <li class="personagem" id="Armario"  data-name="Armario" 
-                data-description="Armario é uma das muitas criações Ken, seu proposito é facilitar a vida de Barbie, esse robô tem muita personalidade e tem muito humor, entratanto ele tem um lado sombrio que pode ser ativado por um botão.">
+                data-description="Armario é uma das muitas criações do Ken, seu proposito é facilitar a vida de Barbie, esse robô tem muita personalidade e tem muito humor, entratanto ele tem um lado sombrio que pode ser ativado por um botão.">
                     <img src="../Barbie-Cards/Estilo/Imagens/CArmario.png" alt="Armario">
                 </li>
             </ul>
